--- a/art12/templates/homepage.html
+++ b/art12/templates/homepage.html
@@ -71,6 +71,6 @@
     {% endif %} -->
   {% endif %}
 
-  <p>If there are issues with using the tool, please contact <a href="mailto:nature.helpbesk@eionet.europa.eu">nature.helpbesk@eionet.europa.eu</a>.</p>
+  <p>If there are issues with using the tool, please contact <a href="mailto:nature.helpdesk@eionet.europa.eu">nature.helpdesk@eionet.europa.eu</a>.</p>
 
 {% endblock content %}
