--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -31,7 +31,7 @@
 
     {% include 'reports/filters.html' %}
 
-    {% if dataset.id == 3 %}
+    {% if dataset.id in [3,4] %}
       {% set colspan_all = 45 %}
     {% else %}
       {% set colspan_all=30 %}
@@ -49,6 +49,11 @@
           of Great Britain and Northern Ireland (excluding Gibraltar-GIB).
           </br>
           The data from delayed delivery by Romania were not used for the EU population status assessment.
+        </p>
+      {% elif dataset.id == 4 %}
+        <p class="note">
+          Codes ‘PT’, ‘ES ‘correspond to Portugal mainland (excluding Azores-PTAC and Madeira-PTMA) and Spain
+          mainland (excluding Canary Islands-ESIC) respectively.
         </p>
       {% endif %}
       <div style="overflow-x:auto;min-height: 500px;">
