Fix text in summary page

--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -27,8 +27,7 @@
 
     <p>The Article 12 web tool provides an access to EU assessments and Member States’ data compiled
        as part of the Habitats Directive - Article 12 reporting process. The EU assessments have been
-       carried out in EU 27 for the period 2008-2012 and in EU28 for the period 2013-2018 ...2012, in EU28 for the period 2013-2018
-       and in EU 27 for the period 2019-2024.
+       carried out in EU 27 for the period 2008-2012 and in EU28 for the period 2013-2018 and in EU 27 for the period 2019-2024.
     </p>
     <p>Choose period, species and if relevant sub-specific unit.</p>
     <p>Once a selection has been made the breeding distribution of the species can be visualized in a map.</p>
