[refs #277636] Implement feedback for data species reports

--- a/art12/templates/common/species_table_header_2024.html
+++ b/art12/templates/common/species_table_header_2024.html
@@ -82,21 +82,21 @@
 
     <th title="Short-term trend period">ST period</th>
     <th title="Short-term trend direction:
-               -: decreasing
-               +: increasing
-               =: stable
-               f: fluctuating
-               u: uncertain
-               x: unknown">ST direction</th>
+               D: decreasing
+               I: increasing
+               S: stable
+               F: fluctuating
+               U: uncertain
+               Unk: unknown">ST direction</th>
     <th title="Short-term trend magnitude (%) - min | max | (best single value)">ST magnitude</th>
     <th title="Long-term trend period">LT period</th>
     <th title="Long-term trend direction:
-               -: decreasing
-               +: increasing
-               =: stable
-               f: fluctuating
-               u: uncertain
-               x: unknown">LT direction</th>
+               D: decreasing
+               I: increasing
+               S: stable
+               F: fluctuating
+               U: uncertain
+               Unk: unknown">LT direction</th>
     <th title="Long-term trend magnitude (%) - min | max | (best single value)">LT magnitude</th>
     <th title='Additional population trend information available, if "#"'>&#8505;</th>
 
@@ -132,21 +132,21 @@
 
     <th title="Short-term trend period">ST period</th>
     <th title="Short-term trend direction:
-               -: decreasing
-               +: increasing
-               =: stable
-               f: fluctuating
-               u: uncertain
-               x: unknown">ST direction</th>
+               D: decreasing
+               I: increasing
+               S: stable
+               F: fluctuating
+               U: uncertain
+               Unk: unknown">ST direction</th>
     <th title="Short-term trend magnitude (%) - min | max | (best single value)">ST magnitude</th>
     <th title="Long-term trend period">LT period</th>
     <th title="Long-term trend direction:
-               -: decreasing
-               +: increasing
-               =: stable
-               f: fluctuating
-               u: uncertain
-               x: unknown">LT direction</th>
+               D: decreasing
+               I: increasing
+               S: stable
+               F: fluctuating
+               U: uncertain
+               Unk: unknown">LT direction</th>
     <th title="Long-term trend magnitude (%) - min | max | (best single value)">LT magnitude</th>
     <th title='Additional distribution trend information available, if "#"'>&#8505;</th>
 
@@ -199,21 +199,21 @@
 
     <th title="Short-term trend period">ST period</th>
     <th title="Short-term trend direction:
-               -: decreasing
-               +: increasing
-               =: stable
-               f: fluctuating
-               u: uncertain
-               x: unknown">ST direction</th>
+               D: decreasing
+               I: increasing
+               S: stable
+               F: fluctuating
+               U: uncertain
+               Unk: unknown">ST direction</th>
     <th title="Short-term trend magnitude (%) - min | max | (best single value)">ST magnitude</th>
     <th title="Long-term trend period">LT period</th>
     <th title="Long-term trend direction:
-               -: decreasing
-               +: increasing
-               =: stable
-               f: fluctuating
-               u: uncertain
-               x: unknown">LT direction</th>
+               D: decreasing
+               I: increasing
+               S: stable
+               F: fluctuating
+               U: uncertain
+               Unk: unknown">LT direction</th>
     <th title="Long-term trend magnitude (%) - min | max | (best single value)">LT magnitude</th>
     <th title='Additional population trend information available, if "#"'>&#8505;</th>
     <th>Status</th>
