--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -39,7 +39,11 @@
 
     {% if current_selection %}
       {% set page_type='report' %}
-      {% include 'common/legend.html' with context %}
+      {% if dataset.id == 4 %}
+        {% include 'common/legend_2024.html' with context %}
+      {% else %}
+        {% include 'common/legend.html' with context %}
+      {% endif %}
       {% if dataset.id == 3 %}
         <p class="note">
           Codes ‘PT’, ‘ES‘ correspond to Portugal mainland (excluding Azores-PTAC and Madeira-PTMA) and Spain
@@ -66,6 +70,8 @@
           {% set is_reports = true %}
           {% if dataset.id == 3 %}
             {% include "common/species_table_header_2018.html" with context %}
+          {% elif dataset.id == 4 %}
+            {% include "common/species_table_header_2024.html" with context %}
           {% else %}
             {% include "common/species_table_header.html" with context %}
           {% endif %}
@@ -82,6 +88,8 @@
               </td>
               {% if dataset.id == 3 %}
                 {% include 'summary/content/content_2018.html' %}
+              {% elif dataset.id == 4 %}
+                {% include 'summary/content/content_2024.html' with context %}
               {% else %}
                 {% include 'summary/content/population_bs.html' with context %}
                 {% include 'summary/content/range.html' with context %}
