--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -40,7 +40,7 @@
     {% if current_selection %}
       {% set page_type='report' %}
       {% if dataset.id == 4 %}
-        {% include 'common/legend_2024.html' with context %}
+        {% include 'common/2024/legend.html' with context %}
       {% else %}
         {% include 'common/legend.html' with context %}
       {% endif %}
@@ -69,11 +69,11 @@
 
           {% set is_reports = true %}
           {% if dataset.id == 3 %}
-            {% include "common/species_table_header_2018.html" with context %}
+            {% include "common/2018/species_table_header.html" with context %}
           {% elif dataset.id == 4 %}
-            {% include "common/species_table_header_2024.html" with context %}
+            {% include "common/2024/species_table_header.html" with context %}
           {% else %}
-            {% include "common/species_table_header.html" with context %}
+            {% include "common/2012/species_table_header.html" with context %}
           {% endif %}
 
           <tbody class="stripe_3rd">
@@ -87,14 +87,11 @@
                 </a>
               </td>
               {% if dataset.id == 3 %}
-                {% include 'summary/content/content_2018.html' %}
+                {% include 'summary/content/2018/content.html' %}
               {% elif dataset.id == 4 %}
-                {% include 'summary/content/content_2024.html' with context %}
+                {% include 'summary/content/2024/content.html' with context %}
               {% else %}
-                {% include 'summary/content/population_bs.html' with context %}
-                {% include 'summary/content/range.html' with context %}
-                {% include 'summary/content/population_ws.html' with context %}
-                {% include 'summary/content/gridded_maps.html' with context %}
+                {% include 'summary/content/2012/content.html' %}
               {% endif %}
             </tr>
           {% endfor %}
